# rename-media

./: .gitignore  BUILD_EXE.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_USER.txt  TODO.md  convert_icon.py  folder_organizer.py  history_manager.py  pyproject.toml  rename_media_cli.py  rename_media_gui.py  requirements.txt  template_parser.py  test_renamed_check.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: CLAUDE.MD  QUICK_START.txt  v1.3.0_RELEASE.md
tests/: test_scan_logic.py
