[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rename-media"
version = "1.2.0"
description = "Automatic photo and video file renaming by creation date with EXIF/metadata support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Andrey M", email = "maimik@users.noreply.github.com"}
]
maintainers = [
    {name = "Andrey M", email = "maimik@users.noreply.github.com"}
]
keywords = [
    "photo", "video", "rename", "exif", "metadata",
    "media", "organizer", "date", "timestamp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=5.0",
]

[project.urls]
Homepage = "https://github.com/maimik/rename-media"
Documentation = "https://github.com/maimik/rename-media#readme"
Repository = "https://github.com/maimik/rename-media.git"
Issues = "https://github.com/maimik/rename-media/issues"
Changelog = "https://github.com/maimik/rename-media/blob/main/CHANGELOG.md"

[project.scripts]
rename-media = "rename_media_cli:main"

[project.gui-scripts]
rename-media-gui = "rename_media_gui:main"

[tool.setuptools]
py-modules = ["rename_media_cli", "rename_media_gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
